# corvus

./: .env.example  .gitignore  README.md  docker-compose.testbed.yml  docker-compose.yml  launch.py  stop.py
attacker/: Dockerfile
attacker/attacks/: benign_http.sh  goldeneye.sh  http2_rapid_reset.py  http2_rapid_reset.sh  http_flood.sh  port_scan.sh  slow_body.sh  slow_read.sh  slowloris.sh  ssh_bruteforce.sh  syn_flood.sh  udp_flood.sh
capture/: CMakeLists.txt  Dockerfile  README.md  start.sh
capture/asm/: features_avx2.asm
capture/src/: features.c  flow_features.c  flow_features.h  flow_table.c  flow_table.h  flow_types.h  ipc_writer.c  ipc_writer.h  main.c  packet_parser.c  packet_parser.h
capture/tests/: inspect_ipc.c  test_features.c
clients/: Dockerfile
clients/scripts/: fast_baseline.sh  normal_traffic.sh
dashboard/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  themes.ts  types.ts
dashboard/src/components/: AlertDetail.tsx  AlertFeed.tsx  EntityList.tsx  FeatureRadar.tsx  HeatmapRibbon.tsx  IncidentList.tsx  LLMPanel.tsx  ModelHealth.tsx  NetworkPulse.tsx  NetworkTopology.tsx  SettingsPanel.tsx  StatsBar.tsx  StatusBar.tsx  WindowConsensus.tsx
dashboard/src/components/grid/: GridContainer.tsx  Module.tsx  g3.ts
dashboard/src/components/modules/: ModConsensus.tsx  ModDetail.tsx  ModEntities.tsx  ModHealth.tsx  ModHeatmap.tsx  ModKPI.tsx  ModLLM.tsx  ModPulse.tsx  ModStream.tsx  ModTimeline.tsx  ModTopology.tsx  ModTree.tsx
dashboard/src/context/: ThemeContext.tsx
dashboard/src/hooks/: useAlerts.ts  useWebSocket.ts
dashboard/src/lib/: utils.ts
dns/: Dockerfile  dnsmasq.conf
inference/: Dockerfile  _array_tree.c  _array_tree.pyx  classifier.py  config.json  config.py  feature_extractor.py  llm.py  main.py  online_detector.py  online_learner.py  requirements.txt  server.py  setup_ext.py  socket_reader.py  storage.py  ws_handler.py
ntp/: Dockerfile  chrony.conf
scenarios/: goldeneye.yml  http2_rapid_reset.yml  http_flood.yml  mixed.yml  port_scan.yml  slow_body.yml  slow_read.yml  slowloris.yml  ssh_bruteforce.yml  syn_flood.yml  udp_flood.yml
tools/: benchmark_oif.py  eval_all.py  eval_baseline.py  gen_demo_db.py  render_tree.py  run_scenario.py
victim_node/: Dockerfile  nginx.conf  start.sh  traffic.sh
victim_web/: Dockerfile  nginx.conf
